Contrast fix

--- a/_sass/scss/_colors.scss
+++ b/_sass/scss/_colors.scss
@@ -8,7 +8,7 @@ $black                            : #000000;
 $softgrey                         : #ABB4BE;
 $softwhite                        : #FCFEFD;
 $white                            : #FFFFFF;
-$green                            : #93AC3D;
+$green                            : #879e38;
 $darkgreen                        : #465b33;
 
 $blue                             : #12A6C6;
